--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
         </main>
 
         <div class="create-location">
-          <a href="javascript:managerShow()"><i class="fa fa-check" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-check" aria-hidden="true"></i></a>
         </div>
 
         <div class="manager hidden" id="manager">
@@ -154,9 +154,5 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-        <script src="js/Locations.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/manager.js"></script>
     </body>
 </html>
